CRUS ops on recipe API

--- a/recipeEntry.html
+++ b/recipeEntry.html
@@ -9,7 +9,7 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
     <script src="./resources/jquery-3.6.1.js"> </script>
-    <script src="./todoProcessor.js"> </script>
+    <script src="./recipeCRUD.js"> </script>
 
     <style>
         .recipeDiv{
